--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body {
     background-repeat: repeat;
 }
 
+.closer{
+    margin-top: -50px;
+}
+
 h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px; /* 3x bigger */
