--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,35 @@ p {
 .year {
     color: #7187FD;
     font-weight: bold;
+    background-color: #f5f5f5;
+    display: inline-block;
+    position:relative;
+    z-index: 3;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+*, :after, :before {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.yearwrapper{
+    width: 100%;
+    position: relative;
+    text-align: center;
+    font-size: 28px;
+    max-width: 700px;
+    margin: 50px auto 40px;
+}
+
+.divider{
+    height: 4px;
+    width: 100%;
+    background:#7187FD;
+    top: -16px;
+    position: relative;
+    border-radius: 3px;
 }
 
 .money{
