--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px; /* 3x bigger */
     margin-bottom: 10px;
-    padding-top: 170px;
+    padding-top: 50px;
 }
 
 .intro {
@@ -108,7 +108,7 @@ p {
     }
 
     body{
-        padding: 30px 30px 30px 30px;
+        padding: 30px 50px 30px;
     }
 
 
